--- a/back/home.html
+++ b/back/home.html
@@ -6,10 +6,38 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
 </head>
 
 <body>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="imagens/mitologia-africana.jpg" class="d-block w-100" alt="Mitologia Africana">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitologia-egipcia.jpg" class="d-block w-100" alt="Mitologia Egípcia">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitologia-greco-romana.webp" class="d-block w-100" alt="Mitologia Greco-Romana">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitologia-grega.jpg" class="d-block w-100" alt="Mitologia Grega">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitologia-mesopotamica.jpeg" class="d-block w-100" alt="Mitologia Mesopotâmica">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitologia-nórdica.jpg" class="d-block w-100" alt="Mitologia Nórdica">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitologia-hindu.jpg" class="d-block w-100" alt="Mitologia Hindu">
+          </div>
+          <div class="carousel-item">
+            <img src="imagens/mitoogia-romana.jpeg" class="d-block w-100" alt="Mitologia Romana">
+          </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
@@ -20,5 +48,6 @@
         integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
+
+<!-- Falta arrumar essa bomba de carrosel-->
