--- a/back/home.html
+++ b/back/home.html
@@ -1,53 +1,48 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <title>Site | LF</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background: linear-gradient(to right, #7a500b, #DDB957);
+            text-align: center;
+        }
+
+        .box {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background-color: rgba(0, 0, 0, 0.7);
+            padding: 30px;
+            border-radius: 10px;
+        }
+
+        a {
+            text-decoration: none;
+            color: white;
+            border: 3px solid #a66908;
+            border-radius: 15px;
+            padding: 10px;
+        }
+
+        a:hover {
+            background-color: #805208;
+        }
+    </style>
 </head>
 
 <body>
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="6">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="imagens/mitologia-africana.jpg" class="d-block w-100" alt="Mitologia Africana">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitologia-egipcia.jpg" class="d-block w-100" alt="Mitologia Egípcia">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitologia-greco-romana.webp" class="d-block w-100" alt="Mitologia Greco-Romana">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitologia-grega.jpg" class="d-block w-100" alt="Mitologia Grega">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitologia-mesopotamica.jpeg" class="d-block w-100" alt="Mitologia Mesopotâmica">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitologia-nórdica.jpg" class="d-block w-100" alt="Mitologia Nórdica">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitologia-hindu.jpg" class="d-block w-100" alt="Mitologia Hindu">
-          </div>
-          <div class="carousel-item">
-            <img src="imagens/mitoogia-romana.jpeg" class="d-block w-100" alt="Mitologia Romana">
-          </div>
-        </div>
+    <h1>Bem Vindo!</h1>
+    <h2>Faça o cadastro, ou use seu login!</h2>
+    <div class="box">
+        <a href="login.php">Login</a>
+        <a href="formulario.php">Cadastre-se</a>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js"
-        integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa"
-        crossorigin="anonymous"></script>
 </body>
-</html>
 
-<!-- Falta arrumar essa bomba de carrosel-->
+</html>
