--- a/front/site/index.html
+++ b/front/site/index.html
@@ -51,7 +51,31 @@
       padding: 6px;
       border: none;
       box-shadow: 0 3px 5px 0 rgba(0, 1, 1, .1);
+      height: 100%;
     }
+
+    .main-banner{
+      height: 350px;
+      background: rgb(3,0,57);
+      background: linear-gradient(90deg, rgba(3,0,57,1) 0%, rgba(17,17,17,1) 45%, rgba(46,100,111,1) 100%);
+      color: aliceblue;
+      text-align: center;
+      display: flex;
+      text-align: center;
+      justify-content: center;
+
+
+    }
+
+    .main-banner h1, .main-banner p{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    }
+
+    .main-banner > p{
+    }
+
   </style>
 </head>
 
@@ -73,7 +97,7 @@
           </ul>
         </li>
         <li><button type="button" class="btn btn-outline-dark">Mitologias</button></li>
-        <li><button type="button" class="btn btn-outline-dark">Sobre Nós</button></li>
+          <li><button type="button" class="btn btn-outline-dark">Sobre Nós</button></li>
         <li><button type="button" class="btn btn-outline-dark">Contatos</button></li>
         <li><button type="button" class="btn btn-outline-dark">Politica de Privacidade</button></li>
       </ul>
@@ -84,6 +108,11 @@
       </form>
     </nav>
   </header>
+
+  <div class="main-banner">
+    <h1>SEJA BEM VIADO</h1>
+
+  </div>
 
 <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
