--- a/back/home.html
+++ b/back/home.html
@@ -7,41 +7,66 @@
     <title>Site | LF</title>
     <style>
         body {
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .link {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .link > h1 {
+            font-size: 2.5em;
             font-family: Arial, Helvetica, sans-serif;
-            background: linear-gradient(to right, #7a500b, #DDB957);
-            text-align: center;
         }
 
-        .box {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background-color: rgba(0, 0, 0, 0.7);
+        button {
+            width: 20rem;
             padding: 30px;
-            border-radius: 10px;
+            font-size: 20px;
+            color: #fff;
+            background-color: #7abafa;
+            box-shadow: 0px 1px 9px 1px #025eb5;
+            border: none;
         }
 
-        a {
-            text-decoration: none;
-            color: white;
-            border: 3px solid #a66908;
-            border-radius: 15px;
-            padding: 10px;
+        button:hover {
+            scale: 1.03;
+            transition: .2s;
+            cursor: pointer;
         }
 
-        a:hover {
-            background-color: #805208;
+        .imagem > img {
+            width: 100%;
+            height: 99.6vh;
         }
     </style>
 </head>
 
 <body>
-    <h1>Bem Vindo!</h1>
-    <h2>Faça o cadastro, ou use seu login!</h2>
-    <div class="box">
-        <a href="login.php">Login</a>
-        <a href="formulario.php">Cadastre-se</a>
+    <div class="container">
+        <div class="link">
+            <h1>Cadastre-se na nossa página para entrar!</h1>
+
+            <div id="link-button">
+                <a href="#" id="link-atributte">
+                    <button id="button">
+                        Cadastre-se
+                    </button>
+                </a>
+            </div>
+        </div>
+        <div class="imagem">
+            <img src="imagens/mitologia-africana.jpg" alt="">
+        </div>
     </div>
 </body>
 
