--- a/back/home.html
+++ b/back/home.html
@@ -9,6 +9,7 @@
         body {
             margin: 0;
             padding: 0;
+            background-color: bisque;
         }
 
         .container {
@@ -26,6 +27,17 @@
         .link > h1 {
             font-size: 2.5em;
             font-family: Arial, Helvetica, sans-serif;
+            opacity: 0; 
+            animation: fadeIn 3s forwards;
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }
         }
 
         button {
@@ -33,8 +45,8 @@
             padding: 30px;
             font-size: 20px;
             color: #fff;
-            background-color: #7abafa;
-            box-shadow: 0px 1px 9px 1px #025eb5;
+            background-color: #c0902d;
+            box-shadow: 0px 1px 9px 1px #ae7419;
             border: none;
         }
 
@@ -57,7 +69,7 @@
             <h1>Cadastre-se na nossa página para entrar!</h1>
 
             <div id="link-button">
-                <a href="#" id="link-atributte">
+                <a href="login.html" id="link-atributte">
                     <button id="button">
                         Cadastre-se
                     </button>
@@ -65,7 +77,7 @@
             </div>
         </div>
         <div class="imagem">
-            <img src="imagens/mitologia-africana.jpg" alt="">
+            <img src="imagens/home.jpeg" alt="">
         </div>
     </div>
 </body>
