--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -9,9 +9,22 @@
 <body>
     <header>
         <nav>
-            <ul>
-                <li>Mitologia Grega</li>
-                <li>Quiz</li>
+            <ul class="lista-nav">
+                <li><a href="">HOME</a></li>
+                <div class="menu-dropdown">
+                    <button class="menu-button">QUIZ</button>
+                    <div class="dropdown-itens">
+                        <a href="egipcia.html">Egípcia</a>
+                        <a href="fenicia.html">Fenícia</a>
+                        <a href="greco-romana.html">Greco-Romana</a>
+                        <a href="grega.html">Grega</a>
+                        <a href="hindu.html">Hindu</a>
+                        <a href="mesopotamica.html">Mesopotâmica</a>
+                        <a href="nordica.html">Nórdica</a>
+                        <a href="romana.html">Romana</a>
+                    </div>
+                </div>
+                <li><a href="../paginas/grega.html">MITOLOGIA GREGA</a></li>
             </ul>
         </nav>
     </header>
