--- a/back/home.html
+++ b/back/home.html
@@ -9,7 +9,7 @@
         body {
             margin: 0;
             padding: 0;
-            background-color: bisque;
+            background-color: rgb(0, 0, 0);
         }
 
         .container {
@@ -29,6 +29,7 @@
             font-family: Arial, Helvetica, sans-serif;
             opacity: 0; 
             animation: fadeIn 2.5s forwards;
+            color: #fff;
         }
 
         @keyframes fadeIn {
@@ -45,15 +46,17 @@
             padding: 30px;
             font-size: 20px;
             color: #fff;
-            background-color: #c0902d;
-            box-shadow: 0px 1px 9px 1px #ae7419;
+            background-color: #2f51e7;
             border: none;
+            margin-top: 100px;
+            border-radius: 7px;
         }
 
         button:hover {
             scale: 1.03;
             transition: .2s;
             cursor: pointer;
+            background-color: #2051da;
         }
 
         .imagem > img {
@@ -69,7 +72,7 @@
             <h1>Cadastre-se na nossa página para entrar!</h1>
 
             <div id="link-button">
-                <a href="login.html" id="link-atributte">
+                <a href="login.php" id="link-atributte">
                     <button id="button">
                         Cadastre-se
                     </button>
