começo-dos-inputs-quiz

--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css-quiz/animations-css/grecia.css">
     <script src="js/animacoes.js" defer></script>
+    <script src="js/quiz.js" defer></script>
     <title>Quiz Grécia</title>
 </head>
 <body>
@@ -29,5 +30,31 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section id="introducao">
+            <h1>Antes de começar vamos explicar como ira funcionar o quiz:</h1>
+
+            <ol>
+                <li>O quiz terá 10 perguntas, essas perguntas serão separadas em 3 niveis: fácil, intermediário e díficil. Serão 3 perguntas fáceis, 3 perguntas intermediárias e 4 perguntas difíceis.</li>
+                <li>Cada pergunta terá 4 alternativas: A, B, C e D</li>
+                <li>Orientação: As respostas para as perguntas estarão todas nos textos da página da respectiva mitologia, então leia os textos antes de fazer o quiz!</li>
+                <li>E por último, é proibido pesquisar as respostas no google!</li>
+            </ol>
+
+            <h2>Eae, está preparado(a)? Então vamos começar!</h2>
+        </section>
+
+        <section>
+            <form action="grega.html">
+                <div id="facil">
+                    <h3>Fácil:</h3>
+
+                    <label>1. Quem é considerado o rei dos deuses na mitologia grega?</label>
+                    <input type="radio" name="" id="pergunta_1"> A - Apolo
+                </div>
+            </form>
+        </section>
+    </main>
 </body>
 </html>
