--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -45,15 +45,18 @@
             <h2>Eae, está preparado(a)? Então vamos começar!</h2>
         </section>
 
-        <section>
-            <form action="grega.html">
-                <div id="facil">
-                    <h3>Fácil:</h3>
-
-                    <label>1. Quem é considerado o rei dos deuses na mitologia grega?</label>
-                    <input type="radio" name="" id="pergunta_1"> A - Apolo
-                </div>
-            </form>
+        <section id="secao-pergunta">
+            <div class="informacoes-questao">
+                <h1 class="questao"></h1>
+                <p class="pergunta"></p>
+                <p class="dificuldade"></p>
+            </div>
+            <div class="alternativas">
+                <input type="radio" name="" id="marginRadio">
+                <input type="radio" name="" id="">
+                <input type="radio" name="" id="">
+                <input type="radio" name="" id="">
+            </div>
         </section>
     </main>
 </body>
