padding-e-margin-quiz

--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -45,11 +45,11 @@
             <h2>Eae, está preparado(a)? Então vamos começar!</h2>
         </section>
 
-        <section id="secao-pergunta">
+        <section id="secao-pergunta-1">
             <div class="informacoes-questao">
-                <h1 class="questao"></h1>
-                <p class="pergunta"></p>
-                <p class="dificuldade"></p>
+                <h1 class="questao">Pergunta 1:</h1>
+                <p class="pergunta">Quem é considerado o rei dos deuses na mitologia grega?</p>
+                <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
                 <input type="radio" name="" id="marginRadio">
