começando-a-mexer-no-input-radio

--- a/front/site/quiz/grega.html
+++ b/front/site/quiz/grega.html
@@ -52,7 +52,9 @@
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
-                <input type="radio" name="" id="marginRadio">
+                <label for="">
+                    <input type="radio" name="" id="marginRadio"> A - Apolo
+                </label>
                 <input type="radio" name="" id="">
                 <input type="radio" name="" id="">
                 <input type="radio" name="" id="">
