--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -99,11 +99,11 @@
                 <h1>Resposta correta!</h1>
             </div>
         </section>
+
         <section id="secao-pergunta-2">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 2:</h1>
-                <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
-                    nórdico?</p>
+                <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo nórdico?</p>
                 <p class="dificuldade">Nível Fácil</p>
             </div>
             <div class="alternativas">
@@ -119,7 +119,6 @@
                 <label>
                     <input type="radio" name="questao2" id="" value="errado"> D - Skoll
                 </label>
-
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta2">
                 </div>
@@ -152,20 +151,52 @@
         <section id="secao-pergunta-4">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 4</h1>
-                <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
-                    características distintas?</p>
+                <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
+                <p class="dificuldade">Nível Fácil</p>
+            </div>
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao4" id="" value="errado"> A - Odin
+                </label>
+                <label>
+                    <input type="radio" name="questao4" id="" value="errado"> B - Loki
+                </label>
+                <label>
+                    <input type="radio" name="questao4" id="" value="certo"> C - Thor
+                </label>
+                <label>
+                    <input type="radio" name="questao4" id="" value="errado"> D - Freyja
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta4">
+                </div>
+            </div>
+        </section>
+
+        <section id="secao-pergunta-5">
+            <div class="informacoes-questao">
+                <h1 class="questao">Pergunta 5:</h1>
+                <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
-            <label class="marginRadio">
-                <input type="radio" name="questao4" id="" value="errado"> A - Odin (sabedoria), Thor (força), Freyja
-                (amor)
-            </label>
-            <label>
-                <input type="radio" name="questao4" id="" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr
-                (fertilidade)
-            </label>
-            <div class="buttonResponder">
-                <input type="button" value="Responder" id="btnPergunta3">
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao5" id="" value="errado"> A - Odin
+                </label>
+                <label>
+                    <input type="radio" name="questao5" id="" value="errado"> B - Loki
+                </label>
+                <label>
+                    <input type="radio" name="questao5" id="" value="certo"> C - Thor
+                </label>
+                <label>
+                    <input type="radio" name="questao5" id="" value="errado"> D - Freyja
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta5">
+                </div>
             </div>
         </section>
     </main>
