--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -151,21 +151,21 @@
         <section id="secao-pergunta-4">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 4</h1>
-                <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
-                <p class="dificuldade">Nível Fácil</p>
+                <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas características distintas?</p>
+                <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao4" id="" value="errado"> A - Odin
+                    <input type="radio" name="questao4" id="" value="errado"> A - Odin (sabedoria), Thor (força), Freyja (amor)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> B - Loki
+                    <input type="radio" name="questao4" id="" value="errado"> B - Loki (trapaça), Balder (beleza), Freyr (fertilidade)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="certo"> C - Thor
+                    <input type="radio" name="questao4" id="" value="errado"> C - Freyja (amor), Tyr (coragem), Heimdall (vigilância)
                 </label>
                 <label>
-                    <input type="radio" name="questao4" id="" value="errado"> D - Freyja
+                    <input type="radio" name="questao4" id="" value="certo"> D - Odin (sabedoria), Freyja (amor), Thor (trovão)
                 </label>
 
                 <div class="buttonResponder">
@@ -177,21 +177,21 @@
         <section id="secao-pergunta-5">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 5:</h1>
-                <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
+                <p class="pergunta">O que é o Yggdrasil e qual é o seu significado na mitologia nórdica?</p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao5" id="" value="errado"> A - Odin
+                    <input type="radio" name="questao5" id="" value="errado"> A - Uma espada mágica; representa o poder dos deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="errado"> B - Loki
+                    <input type="radio" name="questao5" id="" value="certo"> B -  Uma árvore cósmica que conecta os Nove Mundos; simboliza a ordem do universo
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="certo"> C - Thor
+                    <input type="radio" name="questao5" id="" value="errado"> C - Uma serpente gigante que envolve o mundo; representa a destruição iminente
                 </label>
                 <label>
-                    <input type="radio" name="questao5" id="" value="errado"> D - Freyja
+                    <input type="radio" name="questao5" id="" value="errado"> D - Um pássaro mágico
                 </label>
 
                 <div class="buttonResponder">
