--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css-quiz/animations-css/nordica.css">
     <script src="js/animacoes.js" defer></script>
-    <script src="js/Kauã.js" defer></script>
+    <script src="js/kaua.js" defer></script>
     <title>Quiz Nórdica</title>
 </head>
 
