Página 8 da mitologia nórdica finalizada.

--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -215,16 +215,20 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao6" id="" value="errado"> A - Mjölnir foi forjado por Loki e usado para criar trovões e relâmpagos.
+                    <input type="radio" name="questao6" id="" value="errado"> A - Mjölnir foi forjado por Loki e usado
+                    para criar trovões e relâmpagos.
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="errado"> B - Mjölnir foi roubado por um gigante e Thor teve que buscá-lo em uma jornada épica.
+                    <input type="radio" name="questao6" id="" value="errado"> B - Mjölnir foi roubado por um gigante e
+                    Thor teve que buscá-lo em uma jornada épica.
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="certo"> C - Mjölnir foi presenteado a Thor por Odin e é capaz de derrotar os inimigos dos deuses.
+                    <input type="radio" name="questao6" id="" value="certo"> C - Mjölnir foi presenteado a Thor por Odin
+                    e é capaz de derrotar os inimigos dos deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao6" id="" value="errado"> D -Mjölnir é uma arma lendária, mas não desempenha um papel importante na mitologia nórdica.
+                    <input type="radio" name="questao6" id="" value="errado"> D -Mjölnir é uma arma lendária, mas não
+                    desempenha um papel importante na mitologia nórdica.
                 </label>
 
                 <div class="buttonResponder">
@@ -235,21 +239,26 @@
         <section id="secao-pergunta-7">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 7:</h1>
-                <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia nórdica?</p>
+                <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
+                    nórdica?</p>
                 <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao7" id="" value="errado"> A - Uma grande festa dos deuses antes do fim do mundo.
+                    <input type="radio" name="questao7" id="" value="errado"> A - Uma grande festa dos deuses antes do
+                    fim do mundo.
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="errado"> B - Uma jornada de Thor para resgatar seu martelo Mjölnir do submundo.
+                    <input type="radio" name="questao7" id="" value="errado"> B - Uma jornada de Thor para resgatar seu
+                    martelo Mjölnir do submundo.
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="certo"> C - Uma batalha final entre os deuses e as forças do caos, resultando na destruição do mundo.
+                    <input type="radio" name="questao7" id="" value="certo"> C - Uma batalha final entre os deuses e as
+                    forças do caos, resultando na destruição do mundo.
                 </label>
                 <label>
-                    <input type="radio" name="questao7" id="" value="errado"> D - D A ascensão de um novo deus supremo para governar os Nove Mundos.
+                    <input type="radio" name="questao7" id="" value="errado"> D - D A ascensão de um novo deus supremo
+                    para governar os Nove Mundos.
                 </label>
 
                 <div class="buttonResponder">
@@ -265,19 +274,52 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao8" id="" value="errado"> A - Baldur era um deus da guerra que morreu em batalha, enfraquecendo os deuses.
+                    <input type="radio" name="questao8" id="" value="errado"> A - Baldur era um deus da guerra que
+                    morreu em batalha, enfraquecendo os deuses.
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="errado"> B - Baldur era um deus da beleza que se apaixonou por uma mortal e morreu de tristeza.
+                    <input type="radio" name="questao8" id="" value="errado"> B - Baldur era um deus da beleza que se
+                    apaixonou por uma mortal e morreu de tristeza.
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="certo"> C - Baldur era imortal, e sua morte foi uma surpresa para os deuses, que ficaram abalados.
+                    <input type="radio" name="questao8" id="" value="certo"> C - Baldur era imortal, e sua morte foi uma
+                    surpresa para os deuses, que ficaram abalados.
                 </label>
                 <label>
-                    <input type="radio" name="questao8" id="" value="errado"> D - Baldur era um deus amado cuja morte levou a uma série de eventos que levaram ao Ragnarök. 
+                    <input type="radio" name="questao8" id="" value="errado"> D - Baldur era um deus amado cuja morte
+                    levou a uma série de eventos que levaram ao Ragnarök.
                 </label>
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta8">
+                </div>
+            </div>
+        </section>
+        <section id="secao-pergunta-9">
+            <div class="informacoes-questao">
+                <h1 class="questao">Pergunta 9:</h1>
+                <p class="pergunta">Qual é a história do Martelo Mjölnir, arma de Thor, e por que é tão famoso?</p>
+                <p class="dificuldade">Nível médio</p>
+            </div>
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao9" id="" value="errado"> A - Mjölnir foi forjado por Loki e usado
+                    para criar trovões e relâmpagos.
+                </label>
+                <label>
+                    <input type="radio" name="questao9" id="" value="errado"> B - Mjölnir foi roubado por um gigante e
+                    Thor teve que buscá-lo em uma jornada épica.
+                </label>
+                <label>
+                    <input type="radio" name="questao9" id="" value="certo"> C - Mjölnir foi presenteado a Thor por Odin
+                    e é capaz de derrotar os inimigos dos deuses.
+                </label>
+                <label>
+                    <input type="radio" name="questao9" id="" value="errado"> D -Mjölnir é uma arma lendária, mas não
+                    desempenha um papel importante na mitologia nórdica.
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta9">
                 </div>
             </div>
         </section>
