As questões 9 e 10 dos mitos nórdicos estão feitas

--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -51,7 +51,7 @@
             <input type="button" value="COMEÇAR" id="btnComecar">
         </section>
 
-        <section id="secao-pergunta-1">
+        <section id="secao-pergunta-1" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 1:</h1>
                 <p class="pergunta">Quem é o deus do trovão na mitologia nórdica?</p>
@@ -100,7 +100,7 @@
             </div>
         </section>
 
-        <section id="secao-pergunta-2">
+        <section id="secao-pergunta-2" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 2:</h1>
                 <p class="pergunta">Qual é o nome do lobo gigante que desempenha um papel importante no fim do mundo
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </section>
-        <section id="secao-pergunta-3">
+        <section id="secao-pergunta-3" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 3</h1>
                 <p class="pergunta">Qual é a morada dos deuses na mitologia nórdica?</p>
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </section>
-        <section id="secao-pergunta-4">
+        <section id="secao-pergunta-4" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 4</h1>
                 <p class="pergunta">Quem são os três deuses mais importantes da mitologia nórdica e quais são suas
@@ -180,7 +180,7 @@
             </div>
         </section>
 
-        <section id="secao-pergunta-5">
+        <section id="secao-pergunta-5" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 5:</h1>
                 <p class="pergunta">O que é o Yggdrasil e qual é o seu significado na mitologia nórdica?</p>
@@ -207,7 +207,7 @@
                 </div>
             </div>
         </section>
-        <section id="secao-pergunta-6">
+        <section id="secao-pergunta-6" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 6:</h1>
                 <p class="pergunta">Qual é a história do Martelo Mjölnir, arma de Thor, e por que é tão famoso?</p>
@@ -236,7 +236,7 @@
                 </div>
             </div>
         </section>
-        <section id="secao-pergunta-7">
+        <section id="secao-pergunta-7" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 7:</h1>
                 <p class="pergunta"> Quais são os eventos principais que ocorrem durante o Ragnarök na mitologia
@@ -266,7 +266,7 @@
                 </div>
             </div>
         </section>
-        <section id="secao-pergunta-8">
+        <section id="secao-pergunta-8" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 8:</h1>
                 <p class="pergunta">Explique o mito de Baldur e como sua morte afetou os deuses nórdicos.</p>
@@ -294,32 +294,59 @@
                 </div>
             </div>
         </section>
-        <section id="secao-pergunta-9">
+        <section id="secao-pergunta-9" class="secao-pergunta">
             <div class="informacoes-questao">
                 <h1 class="questao">Pergunta 9:</h1>
-                <p class="pergunta">Qual é a história do Martelo Mjölnir, arma de Thor, e por que é tão famoso?</p>
+                <p class="pergunta">Quem é a valquíria mais famosa da mitologia nórdica e qual é o seu papel nas
+                    histórias?
+                </p>
                 <p class="dificuldade">Nível médio</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao9" id="" value="errado"> A - Mjölnir foi forjado por Loki e usado
-                    para criar trovões e relâmpagos.
+                    <input type="radio" name="questao9" id="" value="errado"> A - A Hela, a deusa da morte, que conduz
+                    as almas para o Valhalla.
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="errado"> B - Mjölnir foi roubado por um gigante e
-                    Thor teve que buscá-lo em uma jornada épica.
+                    <input type="radio" name="questao9" id="" value="errado"> B - Freyja, a deusa do amor, que traz
+                    felicidade aos guerreiros caídos.
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="certo"> C - Mjölnir foi presenteado a Thor por Odin
-                    e é capaz de derrotar os inimigos dos deuses.
+                    <input type="radio" name="questao9" id="" value="certo"> C - Sigrdrífa, a valquíria que desperta o
+                    herói Sigurd e o ajuda em suas aventuras.
                 </label>
                 <label>
-                    <input type="radio" name="questao9" id="" value="errado"> D -Mjölnir é uma arma lendária, mas não
-                    desempenha um papel importante na mitologia nórdica.
+                    <input type="radio" name="questao9" id="" value="errado"> D - Brynhild, a valquíria que cai em
+                    desgraça e é aprisionada em uma torre de fogo.
                 </label>
 
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta9">
+                </div>
+            </div>
+        </section>
+        <section id="secao-pergunta-10" class="secao-pergunta">
+            <div class="informacoes-questao">
+                <h1 class="questao">Pergunta 10:</h1>
+                <p class="pergunta">Como a mitologia nórdica influenciou a cultura viking e suas crenças religiosas?</p>
+                <p class="dificuldade">Nível difícil</p>
+            </div>
+            <div class="alternativas">
+                <label class="marginRadio">
+                    <input type="radio" name="questao10" id="" value="errado"> A - Os vikings rejeitaram completamente a mitologia nórdica em favor de outras crenças
+                </label>
+                <label>
+                    <input type="radio" name="questao10" id="" value="errado"> B - Os vikings abandonaram suas próprias crenças em favor do cristianismo e não foram influenciados pela mitologia.
+                </label>
+                <label>
+                    <input type="radio" name="questao10" id="" value="certo"> C - A mitologia nórdica inspirou a arte, a poesia e as sagas vikings, refletindo valores e crenças culturais.
+                </label>
+                <label>
+                    <input type="radio" name="questao10" id="" value="errado"> D -  mitologia nórdica não teve impacto significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a mitologia.
+                </label>
+
+                <div class="buttonResponder">
+                    <input type="button" value="Responder" id="btnPergunta10">
                 </div>
             </div>
         </section>
