Começo da tela de acertos

--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -38,7 +38,7 @@
             <h1>Antes de começar vamos explicar como ira funcionar o quiz:</h1>
 
             <ol>
-                <li>O quiz terá 10 perguntas, essas perguntas serão separadas em 3 niveis: fácil, intermediário e
+                <li>O quiz terá 10 perguntas, onde essas perguntas serão separadas em 3 niveis: fácil, intermediário e
                     díficil. Serão 3 perguntas fáceis, 3 perguntas intermediárias e 4 perguntas difíceis.</li>
                 <li>Cada pergunta terá 4 alternativas: A, B, C e D</li>
                 <li>Orientação: As respostas para as perguntas estarão todas nos textos da página da respectiva
@@ -98,6 +98,10 @@
             <div id="fraseCerta">
                 <h1>Resposta correta!</h1>
             </div>
+        </section>
+        <section id="quantidaAcertos">
+            <h1 id="Acertos"></h1>
+            <p id="classificacao"></p>
         </section>
 
         <section id="secao-pergunta-2" class="secao-pergunta">
@@ -333,18 +337,22 @@
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
-                    <input type="radio" name="questao10" id="" value="errado"> A - Os vikings rejeitaram completamente a mitologia nórdica em favor de outras crenças
+                    <input type="radio" name="questao10" id="" value="errado"> A - Os vikings rejeitaram completamente a
+                    mitologia nórdica em favor de outras crenças
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="errado"> B - Os vikings abandonaram suas próprias crenças em favor do cristianismo e não foram influenciados pela mitologia.
+                    <input type="radio" name="questao10" id="" value="errado"> B - Os vikings abandonaram suas próprias
+                    crenças em favor do cristianismo e não foram influenciados pela mitologia.
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="certo"> C - A mitologia nórdica inspirou a arte, a poesia e as sagas vikings, refletindo valores e crenças culturais.
+                    <input type="radio" name="questao10" id="" value="certo"> C - A mitologia nórdica inspirou a arte, a
+                    poesia e as sagas vikings, refletindo valores e crenças culturais.
                 </label>
                 <label>
-                    <input type="radio" name="questao10" id="" value="errado"> D -  mitologia nórdica não teve impacto significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a mitologia.
+                    <input type="radio" name="questao10" id="" value="errado"> D - mitologia nórdica não teve impacto
+                    significativo na cultura viking; eles eram mais pragmáticos e guerreiros do que preocupados com a
+                    mitologia.
                 </label>
-
                 <div class="buttonResponder">
                     <input type="button" value="Responder" id="btnPergunta10">
                 </div>
