Quase terminando a jornada pelas terras escandinavas

--- a/front/site/quiz/nordica.html
+++ b/front/site/quiz/nordica.html
@@ -304,7 +304,7 @@
                 <p class="pergunta">Quem é a valquíria mais famosa da mitologia nórdica e qual é o seu papel nas
                     histórias?
                 </p>
-                <p class="dificuldade">Nível médio</p>
+                <p class="dificuldade">Nível difícil</p>
             </div>
             <div class="alternativas">
                 <label class="marginRadio">
