--- a/front/site/paginas/grega.html
+++ b/front/site/paginas/grega.html
@@ -1,144 +1,13 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Site SEPE</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-    }
-
-    body {
-      padding:20px 80px;
-    }
-
-    header {
-      display: flex;
-      justify-content: flex-end;
-      align-items: center;
-    }
-
-    nav {
-      display: flex;
-      align-items: center;
-    }
-
-    .d-flex>input,
-    button {
-      padding: 0;
-    }
-
-    nav>ul {
-      display: flex;
-      align-items: center;
-      gap: 30px;
-      list-style: none;
-      font-family: Arial, Helvetica, sans-serif;
-      font-weight: 600;
-    }
-
-    .d-flex {
-      display: flex;
-      padding: 25px;
-    }
-
-    .card {
-      padding: 6px;
-      border: none;
-      box-shadow: 0 3px 5px 0 rgba(0, 1, 1, .1);
-      height: 100%;
-    }
-
-    .main-banner{
-      height: 350px;
-      background: rgb(3,0,57);
-      background: linear-gradient(90deg, rgba(3,0,57,1) 0%, rgba(17,17,17,1) 45%, rgba(46,100,111,1) 100%);
-      color: aliceblue;
-      text-align: center;
-      display: flex;
-      text-align: center;
-      justify-content: center;
-
-
-    }
-
-    .main-banner h1, .main-banner p{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    }
-
-    .main-banner > p{
-    }
-
-    main{
-      padding: 5% 20%;
-      text-align: justify;
-    }
-
-    main h2{
-      margin: 60px 0 0 0;
-    }
-
-  </style>
+  <link rel="stylesheet" href="../paginas/css/grega.css">
+  <link rel="stylesheet" href="../paginas/css/style.css">
+  <title>Document</title>
 </head>
-
-
 <body>
-    <header>
-      <nav>
-        <ul>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Dropdown
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
-          <li><button type="button" class="btn btn-outline-dark">Mitologias</button></li>
-            <li><button type="button" class="btn btn-outline-dark">Sobre Nós</button></li>
-          <li><button type="button" class="btn btn-outline-dark">Contatos</button></li>
-          <li><button type="button" class="btn btn-outline-dark">Politica de Privacidade</button></li>
-        </ul>
   
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
-      </nav>
-    </header>
-  
-    <div class="main-banner">
-      <h1>MITOLOGIA GREGA</h1>
-  
-    </div>
-
-
-
-    <main>
-        <p>A mitologia grega é o conjunto de mitos que eram narrados, a princípio, oralmente na Grécia Antiga. Esses mitos explicavam fenômenos da natureza e valores da sociedade e também formavam a religiosidade dos gregos antigos. Os principais deuses gregos eram conhecidos como deuses olímpicos. </p>
-
-        <p>Quando falamos em mitologia grega, estamos falando do conjunto de mitos que eram narrados na sociedade grega e que explicavam fenômenos da natureza e outros eventos, como o surgimento da Terra e dos homens, por exemplo. Naturalmente, os mitos que faziam parte da mitologia grega tinham relação direta com a religiosidade dos gregos antigos.</p>
-
-        <p>Como mencionado, uma das características marcantes desses mitos é a explicação que eles davam à realidade dos gregos antigos. Assim, eles serviam como justificativa para certas práticas, mas também explicavam fenômenos que estavam fora do alcance do entendimento humano.</p>
-
-        <p>Esses mitos eram extremamente importantes para a sociedade grega, e isso é percebido pela quantidade de pinturas e esculturas que foram realizadas em sua referência. De início, eles foram transmitidos pela oralidade de geração para geração e acredita-se que tenham se estruturado no período Pré-Homérico.</p>
-
-        <p>A partir do período Homérico é que alguns desses mitos foram registrados pela escrita, com destaque para as obras realizadas por Homero e Hesíodo. Homero se tornou célebre por escrever Ilíada e Odisseia, poemas que narraram a Guerra de Troia e o retorno do herói Ulisses para sua terra natal, a ilha de Ítaca.</p>
-
-        <p>Hesíodo, por sua vez, escreveu Teogonia e Trabalhos e Dias, poemas que narraram o surgimento dos deuses gregos e dos homens. É importante mencionar que, apesar de os mitos serem muito populares e de terem sido fundamentais para a sociedade grega antiga, existiam pessoas céticas que procuravam explicações mais racionais aos fenômenos da natureza.</p>
-
-        <p>Ainda assim, não podemos descartar sua importância, pois além das pinturas e esculturas que retratavam cenas da mitologia, existiam poemas (como os mencionados) e rituais de veneração realizados para diferentes divindades, além da construção de templos.</p>
-        
-    </main>
+</body>
+</html>
